* Begin redesign of splash screen * Use Thread everywhere to avoid network on main thread

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,13 +8,10 @@
     <!-- Message displayed if the nickname is not valid. -->
     <string name="nickname_not_valid">Nickname is not valid, please enter a different one and try again</string>
     <!-- Text on the "Connect" button on the main screen -->
-    <string name="connect_button">Start Chatting</string>
+    <string name="connect_button">Chat</string>
     <!-- Message to say connection is in progress -->
     <string name="connect_message">Connecting to ScoutLink&#8230;</string>
-    <!-- Text displayed below the logo on the main screen -->
-    <string name="welcome_text">
-        Welcome to ScoutLink, the IRC network for Scouts and Guides.\nPlease enter a nickname below.
-    </string>
+    <string name="logo_content_description">ScoutLink logo</string>
     <string name="sl_header_content_description">Header image</string>
     <string name="channel_list_on_connect">Show channel list after connecting</string>
     <!-- Menu Items -->
