--- a/app/src/main/res/values-pt-rBR/strings.xml
+++ b/app/src/main/res/values-pt-rBR/strings.xml
@@ -170,13 +170,13 @@
     <string name="default_quit_message">"ScoutLink para Android!"</string>
     <string name="nick_already_in_use">"Esse apelido já está em uso, por favor selecione um apelido diferente e tente novamente."</string>
 
-    <string name="notification_new_mentions">"%1$s nova(s) menções) em %2$s."</string>
-    <string name="notification_new_mentions_multi">"%1$s nova(s) menção(ões) em %2$s conversa(s)."</string>
+    <string name="notification_new_mentions">"%1$d nova(s) menções) em %2$s."</string>
+    <string name="notification_new_mentions_multi">"%1$d nova(s) menção(ões) em %2$d conversa(s)."</string>
     <string name="notification_new_messages_inbox_title">"Novas mensagens em ScoutLink"</string>
-    <string name="notification_new_messages">"%1$s novas mensagens em %2$s conversas."</string>
+    <string name="notification_new_messages">"%1$d novas mensagens em %2$d conversas."</string>
     <string name="notification_new_messages_multi">"%1$s/%2$s: %3$s"</string>
     <string name="notification_connected">"Conectado como %1$s."</string>
-    <string name="notification_new_multi">"%1$s novas mensagens, %2$s novas menções."</string>
+    <string name="notification_new_multi">"%1$d novas mensagens, %2$d novas menções."</string>
 
 
     <string name="notice_hint">"Digite sua mensagem"</string>
