Fix build errors and lint error

--- a/app/src/main/res/values-cy/strings.xml
+++ b/app/src/main/res/values-cy/strings.xml
@@ -10,8 +10,8 @@
     <string name="connect_button">"Dechreuwch Siarad"</string>
     <!-- Message to say connection is in progress -->
     <string name="connect_message">"cysylltu â ScoutLink&#8230;"</string>
-    <!-- Text displayed below the logo on the main screen -->
-    <string name="welcome_text">"Croeso i ScoutLink, rhwydwaith IRC ar gyfer Sgowtiaid a Geidiau. Rhowch fynd i mewn i llysenw isod."</string>
+
+    <string name="logo_content_description">ScoutLink logo</string>
     <string name="sl_header_content_description">"Header image"</string>
     <string name="channel_list_on_connect">"Dangos rhestr sianel ar ôl ymuno"</string>
     <!-- Menu Items -->
