--- a/app/src/main/res/values-pt-rBR/strings.xml
+++ b/app/src/main/res/values-pt-rBR/strings.xml
@@ -117,7 +117,7 @@
     <string name="message_whois_away">"Away: %1$s\n"</string>
     <string name="message_whois_registered">"Registrado como: %1$s\n"</string>
     <string name="message_whois_channels">"Canais: %1$s \n"</string>
-    <string name="message_whois_idle">"Ocioso há: %1$s \n"</string>
+    <string name="message_whois_idle">"Ocioso há: %1$d \n"</string>
     <string name="message_join_failed">"Não é possível entrar em %1$s ( %2$s )"</string>
 
     <string name="message_notify_online">"%1$s está online"</string>
@@ -197,9 +197,13 @@
     <!-- Default Real Name to use if the user does not set one, this will show in WHOIS -->
     <string name="default_gecos">"ScoutLink IRC para Android!"</string>
 
+    <string name="failed_to_load_user_list">Failed to load user list</string>
+
     <!-- Core App Settings, probably don't need localising. -->
     <string name="server_window_title">"ScoutLink"</string>
     <string name="channel_name_prefix">"#"</string>
 
     <string name="server_address">"chat.scoutlink.net"</string>
+
+
 </resources>
