--- a/app/src/main/res/values-pt-rBR/strings.xml
+++ b/app/src/main/res/values-pt-rBR/strings.xml
@@ -49,6 +49,9 @@
     <string name="join_activity_label">"Entrar no Canal"</string>
 
     <string name="title_activity_log_list">Toras</string>
+    <string name="title_activity_log_view">Vista de log</string>
+    <string name="logs_deleted">Logs para %1$s excluídas</string>
+    <string name="no_logs_to_view">Não há registros para visualizar</string>
 
     <string name="title_activity_channel_list">"Lista de Canais"</string>
     <string name="userlist_activity_label">"Lista de usuários"</string>
@@ -198,11 +201,12 @@
     <!-- Default Real Name to use if the user does not set one, this will show in WHOIS -->
     <string name="default_gecos">"ScoutLink IRC para Android!"</string>
 
-    <string name="failed_to_load_user_list">Failed to load user list</string>
+    <string name="failed_to_load_user_list">Falha ao carregar a lista de usuários</string>
 
     <!-- Core App Settings, probably don't need localising. -->
     <string name="server_window_title">"ScoutLink"</string>
     <string name="channel_name_prefix">"#"</string>
 
     <string name="server_address">"chat.scoutlink.net"</string>
+    <string name="title_activity_log_list">Logs</string>
 </resources>
