--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -141,6 +141,8 @@
 
     <string name="title_activity_log_list">Logs</string>
     <string name="title_activity_log_view">Log view</string>
+    <string name="logs_deleted">Logs for %1$s deleted</string>
+    <string name="no_logs_to_view">There are no logs to view</string>
 
     <string name="title_activity_list_view_edit">Edit List</string>
     <string name="edit_list_remove_item_confirm_title">Remove Item?</string>
@@ -196,15 +198,15 @@
 
     <!-- Default settings values -->
     <!-- Default ident to use if the user does not set one, this will show in the users hostmask (nick!ident@host) -->
-    <string name="default_ident">SLAndroid</string>
+    <string name="default_ident" translatable="false">SLAndroid</string>
     <!-- Default Real Name to use if the user does not set one, this will show in WHOIS -->
     <string name="default_gecos">ScoutLink IRC for Android!</string>
 
     <string name="failed_to_load_user_list">Failed to load user list</string>
 
     <!-- Core App Settings, probably don't need localising. -->
-    <string name="server_window_title">ScoutLink</string>
-    <string name="channel_name_prefix">#</string>
+    <string name="server_window_title" translatable="false">ScoutLink</string>
+    <string name="channel_name_prefix" translatable="false">#</string>
 
-    <string name="server_address">chat.scoutlink.net</string>
+    <string name="server_address" translatable="false">chat.scoutlink.net</string>
 </resources>
