--- a/app/src/main/res/values-pt-rBR/strings.xml
+++ b/app/src/main/res/values-pt-rBR/strings.xml
@@ -56,6 +56,8 @@
     <string name="log_action_export">Exportar</string>
     <string name="log_exported">Arquivo de log exportado para %1$s</string>
     <string name="error_exporting_logs">Erro ao exportar o arquivo de log</string>
+    <string name="settings_enable_logging">Ativar log</string>
+    <string name="settings_load_previous_messages_on_join">Carregar mensagens anteriores ao participar</string>
 
     <string name="title_activity_channel_list">"Lista de Canais"</string>
     <string name="userlist_activity_label">"Lista de usuários"</string>
