--- a/app/src/main/res/values-cy/strings.xml
+++ b/app/src/main/res/values-cy/strings.xml
@@ -215,4 +215,6 @@
     <string name="channel_name_prefix">"#"</string>
 
     <string name="server_address">"chat.scoutlink.net"</string>
+    <string name="previous_session_header">Negeseuon blaenorol</string>
+    <string name="current_session_header">Sesiwn gyfredol</string>
 </resources>
