* Implement unread messages count * Implement connection status * Start work to remove UserListActivity * Start moving join channel button to sidebar

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,6 +14,7 @@
     <string name="logo_content_description">ScoutLink logo</string>
     <string name="sl_header_content_description">Header image</string>
     <string name="channel_list_on_connect">Show channel list after connecting</string>
+    <string name="not_connected">Not connected</string>
     <!-- Menu Items -->
     <!-- Opens Application Settings, e.g., nick, ident, realname, quit message -->
     <string name="action_settings">Settings</string>
