--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -130,12 +130,19 @@
     <string name="action_kill_dialog_title">Reason for kill</string>
     <string name="action_notice_dialog_title">Send a notice</string>
 
+    <string name="settings_category_identity">Identity</string>
     <string name="settings_nickname_label">Nickname:</string>
+    <string name="settings_nickname_summary">The name which will appear to other users</string>
     <string name="settings_ident_label">Username:</string>
+    <string name="settings_ident_summary">Appears before the @ in your hostname (username@host)</string>
     <string name="settings_gecos_label">Real Name:</string>
+    <string name="settings_gecos_summary">Visible to other users via /whois</string>
     <string name="settings_quit_message_label">Quit Message:</string>
+    <string name="settings_quit_message_summary">This message will be displayed when you disconnect from ScoutLink</string>
     <string name="settings_nickserv_user_label">Nickserv Username:</string>
+    <string name="settings_nickserv_user_summary">The nickname used to login to NickServ</string>
     <string name="settings_nickserv_password_label">Nickserv Password:</string>
+    <string name="settings_nickserv_password_summary">The password used to login to NickServ</string>
 
     <string name="title_activity_log_list">Logs</string>
     <string name="title_activity_log_view">Log view</string>
@@ -145,16 +152,23 @@
     <string name="log_action_export">Export</string>
     <string name="log_exported">Log file exported to %1$s</string>
     <string name="error_exporting_logs">Error exporting log file</string>
+
+    <string name="settings_category_logging">Logging</string>
     <string name="settings_enable_logging">Enable logging</string>
-    <string name="settings_load_previous_messages_on_join">Load previous messages on join</string>
+    <string name="settings_load_previous_messages_on_join_label">Load previous messages on join</string>
+    <string name="settings_load_previous_messages_on_join_summary">Shows previous messages from the channel when you join</string>
 
     <string name="title_activity_list_view_edit">Edit List</string>
     <string name="edit_list_remove_item_confirm_title">Remove Item?</string>
     <string name="edit_list_remove_item_confirm_text">Are you sure you want to remove this item?</string>
 
+    <string name="settings_category_other">Other</string>
     <string name="settings_autojoin_channels_label">Autojoin Channels</string>
+    <string name="settings_autojoin_channels_summary">Channels to autojoin on connect</string>
     <string name="settings_command_on_connect_label">Run commands on connect</string>
+    <string name="settings_command_on_connect_summary">Commands to be run on connect</string>
     <string name="settings_notify_list_label">Notify List</string>
+    <string name="settings_notify_list_summary">Get notified when users are online</string>
 
     <string name="title_activity_channel_settings">Channel Settings</string>
     <string name="title_activity_rules">Rules</string>
